fix menu collapse/expand animation

--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -3,28 +3,24 @@
     flex-direction: column;
     padding: 30px 0;
     height: 100%;
-    width: 0;
-    margin-left: 0px;
     position: absolute;
     z-index: 1;
-    top: 0;
-    left: 0;
-    overflow-x: hidden;
-    transition: 0.5s;
+    left: -50%;
+    width: 250px;
+    overflow: hidden;
+    transition: 0.5s ease-in-out;
 }
 
-.menu--is-open {
-    width: 250px;
+.menu.menu--is-open {
+    left:0;
     padding: 30px 30px;
 }
-
 
 .menu .menu-item {
   text-decoration: none;
   color: #bebaba;
   display: block;
 }
-
 
 .menu .menu-item-main {
   font-size: 20px;
